[package]
name = "markets-daemons"
version = "0.1.0"
authors = ["pavelpichrt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "store"
path = "src/store.rs"

[[bin]]
name = "main"
path = "src/bin.rs"
